--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@
       background-size: 100% 200%;
       animation: dropDown 5s infinite;
       max-width: 100%;
-      height: 300px;
+      height: 500px;
     }
     
 
@@ -201,7 +201,15 @@
     
     
     
-    
+    h1 {
+      font-size: 20px;
+      color: white;
+  }
+
+  h3 {
+    font-size: 20px;
+    color: white;
+}
     
     
     
@@ -281,7 +289,7 @@
       display: flex;
       justify-items: flex-start;
       max-width: 100%;
-      height: 59%;
+      height: 30%;
       justify-content: center;
       gap: 100px;
       margin-top: 11%;
