--- a/styles2.css
+++ b/styles2.css
@@ -83,7 +83,15 @@
       min-height: 100%;
     
     }
-    
+    h1 {
+      font-size: 10px;
+      color: white;
+  }
+
+  h3 {
+    font-size: 10px;
+    color: white;
+}
 
 
 
